Remove waypoints sticky & fix chrome sticky nav visibility issue

--- a/source/css/_layout_grid.sass
+++ b/source/css/_layout_grid.sass
@@ -69,3 +69,7 @@
 
 .clear
   clear: both
+
+.nav-hide
+  display: none
+  visibility: hidden
